# newsletter

./: .env  Cargo.toml  README.md  configuration.yaml  db_migrations.md
scripts/: init_db.sh
src/: configuration.rs  lib.rs  logger.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
