[package]
name = "newsletter"
version = "0.1.0"
authors = ["William Munoz <william@rustdeveloper.io>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.14.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = {  version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
tracing-actix-web = "0.7"
tracing-error = "0.2.0"
secrecy = { version = "0.8", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive", "env"] }
color-eyre = { version = "0.6.2", default-features = false, features = ["issue-url", "tracing-error", "capture-spantrace", "color-spantrace"] }
axum = "0.7.4"

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"